--- a/src/main/resources/templates/courselist.html
+++ b/src/main/resources/templates/courselist.html
@@ -33,7 +33,7 @@ a:hover{ text-decoration:none;}
 <div id="courseList">
 <div class="head" id="fixed">
 	<div class="nav">
-    	<span class="navimg"><a href="jiajiao"><img border="0" src="images/logo.png"></a></span>
+    	<span class="navimg"><a href="fam_edu"><img border="0" src="images/logo.png"></a></span>
         <ul class="nag">
           <li><a href="teacherlist.html" class="link1">讲师</a></li>
         	<li><a href="courselist.html" class="link1 current">课程</a></li>
@@ -60,7 +60,7 @@ a:hover{ text-decoration:none;}
             	function logout(){
             		$.post("user/logout",function(data){
             			if(data){
-            				location.href="jiajiao";
+            				location.href="fam_edu";
             			}
             		})
             	}
