--- a/src/main/resources/templates/teacher.html
+++ b/src/main/resources/templates/teacher.html
@@ -45,7 +45,7 @@
             	function logout(){
             		$.post("user/logout",function(data){
             			if(data){
-            				location.href="jiajiao";
+            				location.href="fam_edu";
             			}
             		})
             	}
