--- a/src/main/resources/templates/coursecont.html
+++ b/src/main/resources/templates/coursecont.html
@@ -43,7 +43,7 @@
             	function logout(){
             		$.post("user/logout",function(data){
             			if(data){
-            				location.href="jiajiao";
+            				location.href="fam_edu";
             			}
             		})
             	}
@@ -68,7 +68,7 @@
 <div class="coursepic">
 	<div class="course_img"><img src="images/box1.jpg" width="500"></div>
     <div class="coursetitle">
-   		<a class="state">更新中</a>
+   		<!--<a class="state">更新中</a>-->
     	<h2 class="courseh2" th:text="${course.name}">会计基础</h2>    
 		<p class="courstime" th:text="'讲师：'+${course.teacher.realname}"></p>
         <p class="courstime" th:text="'课程价格：'+${course.price}"></p>
@@ -86,9 +86,6 @@
 				<a href="#" class="bds_more" data-cmd="more"></a>
 				<a class="bds_count" data-cmd="count"></a>
 			</div>
-            <script>
-			window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdMiniList":false,"bdPic":"","bdStyle":"0","bdSize":"24"},"share":{},"image":{"viewList":["qzone","tsina","tqq","renren","weixin"],"viewText":"分享到：","viewSize":"24"}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];
-			</script>
        </div>
     </div>
     <div class="clearh"></div>
