--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,7 +22,7 @@
 
 <div class="head" id="fixed">
 	<div class="nav">
-    	<span class="navimg"><a href="jiajiao"><img border="0" src="images/logo.png"></a></span>
+    	<span class="navimg"><a href="fam_edu"><img border="0" src="images/logo.png"></a></span>
         <ul class="nag">
           <li><a href="teacherlist.html" class="link1 current">讲师</a></li>
         	<li><a href="courselist.html" class="link1">课程</a></li>
@@ -95,7 +95,7 @@
 				var formData=$("#loginForm").serializeJSON();
 				$.post("user/login",formData,function(data){
 					if(data.success==true){
-						location.href="jiajiao";
+						location.href="fam_edu";
 					}else{
 						$("#tishi").html("密码或密码不正确");
 					}
