--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -22,7 +22,7 @@
 
 <div class="head" id="fixed">
 	<div class="nav">
-    	<span class="navimg"><a href="jiajiao"><img border="0" src="images/logo.png"></a></span>
+    	<span class="navimg"><a href="fam_edu"><img border="0" src="images/logo.png"></a></span>
         <ul class="nag">
           <li><a href="teacherlist.html" class="link1 current">讲师</a></li>
         	<li><a href="courselist.html" class="link1">课程</a></li>
@@ -46,7 +46,7 @@
             	function logout(){
             		$.post("user/logout",function(data){
             			if(data){
-            				location.href="jiajiao";
+            				location.href="fam_edu";
             			}
             		})
             	}
