--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>家教预约管理系统 首页</title>
+		<title>家教预约管理系统-管理员 首页</title>
 		<link href="favicon.ico" rel="icon" type="image/x-icon" />
 		<!-- 导入jquery核心类库 -->
 		<script type="text/javascript" src="./js/jquery-1.8.3.js"></script>
@@ -164,7 +164,7 @@
 			}
 			// 版权信息
 			function showAbout(){
-				$.messager.alert("华富商城","设计: <br/> 管理员邮箱: @163.com <br/>");
+				$.messager.alert("管理员","设计: <br/> 管理员邮箱: @163.com <br/>");
 			}
 		</script>
 	</head>
@@ -172,7 +172,7 @@
 	<body class="easyui-layout">
 		<div data-options="region:'north',border:false" style="height:70px;padding:10px;">
 			<div>
-				<img src="" border="0"><h1 style="font-size: 25px">家教预约管理系统</h1>
+				<img src="" border="0"><h1 style="font-size: 25px">家教预约管理系统-管理员</h1>
 			</div>
 			<div id="sessionInfoDiv" style="position: absolute;right: 5px;top:10px;">
 			</div>
