--- a/src/main/resources/templates/admin/theachLogin.html
+++ b/src/main/resources/templates/admin/theachLogin.html
@@ -11,7 +11,7 @@
     <script src="plugins/j/js/bootstrap.js"></script>
 	<script type="text/javascript" src="js/jquery.serializejson.min.js"></script>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>学生登录</title>
+    <title>教师登录</title>
 </head>
 <body>
 
@@ -66,7 +66,7 @@
                             <input type="button" class="btn" value="登录" id="tijiao">
                         </div>
                         <div class="be-con">
-                            <span>Copyright © 2018 - 2019 <a href="">学生登录</a></span>
+                            <span>Copyright © 2020 - 2020 <a href="">教师登录</a></span>
                         </div>
                     </div>
                 </form>
