--- a/src/main/resources/templates/admin/login.html
+++ b/src/main/resources/templates/admin/login.html
@@ -31,13 +31,23 @@
 							$(function(){
 								$("#tijiao").click(function(){
 										var formData=$("#loginForm").serializeJSON();
-										$.post("admin/login",formData,function(data){
-											if(data.success==true){
-												location.href="admin";
-											}else{
-												$("#tishi").html("密码或密码不正确");
-											}
-										}) 
+										if(formData.role == 'admin'){
+											$.post("admin/login",formData,function(data){
+												if(data.success==true){
+													location.href="admin";
+												}else{
+													$("#tishi").html("密码或密码不正确");
+												}
+											})
+										}else if(formData.role == 'teach'){
+											$.post("teacher/login",formData,function(data){
+												if(data.success==true){
+													location.href="teachIndex";
+												}else{
+													$("#tishi").html("密码或密码不正确");
+												}
+											})
+										}
 								})
 							})
 						</script>
@@ -56,6 +66,16 @@
 									<div class="col-sm-8">
 										<input class="form-control" id="password" type="password" name="password" required placeholder="请输入密码"   
 											data-msg-required="请输入密码"  minlength="6" data-msg-minlength="至少输入6个字符">
+									</div>
+									<div id="word" style="color: red;margin-top: 10px"></div>
+								</div>
+								<div class="form-group">
+									<label for="inputpassword" class="col-sm-3 control-label">角色</label>
+									<div class="col-sm-8">
+										<select name="role">
+											<option selected="selected" value="admin">管理员</option>
+											<option value="teach">教师</option>
+										</select>
 									</div>
 									<div id="word" style="color: red;margin-top: 10px"></div>
 								</div>
