--- a/src/main/resources/templates/admin/pages/base/courseMine.html
+++ b/src/main/resources/templates/admin/pages/base/courseMine.html
@@ -22,7 +22,7 @@
 			$(function(){
 				// 先将body隐藏，再显示，不会出现页面刷新效果
 				$("body").css({visibility:"visible"});
-				var img = null;
+				
 				$('#grid').datagrid( {
 					iconCls : 'icon-forward',
 					fit : true,
@@ -32,16 +32,15 @@
 					toolbar : toolbar,
 					pageList: [10,20],
 					pagination : true,
-					url : "../../user/findPage",
+					url : "../../course/findPageMine",
 					idField : 'id',
 					columns : columns
 				});
 				$("#save").click(function(){
 					if($("#formdata").form('validate')){
 						var dataform=$("#formdata").serializeJSON();
-						/* var img = $("#huixian").attr("src");
-						dataform.img=img; */
-						$.post("../../user/add",dataform,function(data){
+						dataform.img=img;
+						$.post("../../course/addMine",dataform,function(data){
 							if(data.success){
 								$('#grid').datagrid("reload");
 								$('#standardWindow').form('clear');
@@ -58,9 +57,7 @@
 			                var reader = new FileReader();  
 			                reader.readAsDataURL(file);//调用自带方法进行转换  
 			                reader.onload = function(e) {  
-			                	var img = e.target.result;
-			                	$("#huixian").attr("src",img);
-			                
+			                	img = e.target.result;
 			                };    
 			        });
 			});
@@ -80,8 +77,7 @@
 					  $("#standardWindow").window("open");
 					  	var row=rowDatas[0];
 						$("#formdata").form("load",row);
-						$("#huixian").attr("src",row.img)
-						//$("#categoryId").combobox('setValue',row.category.id);
+						$("#categoryId").combobox('setValue',row.category.id);
 						$("#standardWindow").window("open");
 				  }else{
 					  $.messager.alert("提示","请选择一条数据");
@@ -101,7 +97,7 @@
 									ids.push(rowDatas[i].id);
 								}
 								ids = ids.join(",");
-								$.post("../../user/delete",{"ids":ids},function(data){
+								$.post("../../course/delete",{"ids":ids},function(data){
 									if(data.success){
 										
 										$("#grid").datagrid("reload");
@@ -136,35 +132,40 @@
 				field : 'id',
 				checkbox : true
 			},{
-				field : 'username',
-				title : '账号',
+				field : 'name',
+				title : '课程名称',
 				width : 120,
 				align : 'center'
 			} ,{
-				field : 'password',
-				title : '密码',
-				width : 120,
+				field : 'content',
+				title : '内容',
+				width : 300,
 				align : 'center'
 			} ,{
-				field : 'realName',
-				title : '姓名',
-				width : 120,
-				align : 'center'
-			} ,{
-				field : 'sex',
-				title : '性别',
-				width : 50,
-				align : 'center'
-			} ,{
-				field : 'accNbr',
-				title : '手机号',
+				field : 'price',
+				title : '价格（￥）',
 				width : 120,
 				align : 'center'
 			},{
-				field : 'email',
-				title : '邮箱',
+				field : 'cate_id',
+				title : '课程分类',
 				width : 120,
-				align : 'center'
+				align : 'center',formatter:function(data,row, index){
+					if(data!=null){
+						return row.category.name;
+					}
+					return "";
+				}
+			},{
+				field : 'tch_id',
+				title : '教授教师',
+				width : 120,
+				align : 'center',formatter:function(data,row, index){
+					if(data!=null){
+						return row.teacher.realname;
+					}
+					return "";
+				}
 			}] ];
 			/*  ,
 				{
@@ -191,7 +192,7 @@
 			<table id="grid"></table>
 		</div>
 		
-		<div class="easyui-window" title="用户添加或者修改" id="standardWindow" collapsible="false" minimizable="false" maximizable="false" modal="true" closed="true" style="width:700px;top:10px;left:200px">
+		<div class="easyui-window" title="添加或者修改" id="standardWindow" collapsible="false" minimizable="false" maximizable="false" modal="true" closed="true" style="width:700px;top:10px;left:200px">
 			<div region="north" style="height:31px;overflow:hidden;" split="false" border="false">
 				<div class="datagrid-toolbar">
 					<a id="save" icon="icon-save" href="#" class="easyui-linkbutton" plain="true">保存</a>
@@ -208,54 +209,37 @@
 							</td>
 						</tr>
 						<tr>
-							<td>账号</td>
+							<td>课程名称</td>
 							<td>
-								<input type="text" name="username" 
+								<input type="text" name="name" 
 									class="easyui-validatebox" required="required" />
 							</td>
-							<td>密码</td>
-							<td>
-								<input type="text" name="password" 
-									class="easyui-validatebox"  required="required"/>
-							</td>
-						</tr>
-						<tr>
-							<td>姓名</td>
-							<td>
-								<input type="text" name="realName" 
-									class="easyui-validatebox"  />
-							</td>
-							<td>性别</td>
-							<td>
-									<select id="cc" class="easyui-combobox" name="sex" style="width: 100px;">   
-									    <option value="0">男</option>   
-									    <option value="1">女</option>   
-									</select>  
-							</td>
+							
 						</tr>
 						
 						<tr>
-							<td>电话</td>
+							<td>价格</td>
 							<td>
-								<input type="text" name="accNbr" 
-									class="easyui-validatebox" oninput="value=value.replace(/[^\d]/g,'')" />
-							</td>
-							<td>邮箱</td>
-							<td>
-								<input type="text" name="email" 
-									class="easyui-validatebox"  />
-							</td>
-						</tr>
-				
-						<!-- 
-						<tr>
-							<td>图片</td>
-							<td colspan="3">
-								<img id="huixian" style="width: 60px;height: 60px;">
-								<input type="file" id="img" multiple="multiple" />
+								<input type="text" name="price" 
+									class="easyui-validatebox"  oninput="value=value.replace(/[^\d]/g,'')" />
 							</td>
 							
-						</tr> -->
+						</tr>
+						<tr>
+							<td>课程分类</td>
+							<td>
+								<input type="text" class="easyui-combobox" name="cate_id"
+									  data-options="valueField:'id',textField:'name',url:'../../category/findAll'"/>
+							</td>
+						</tr>
+						<tr>
+							<td>课程内容</td>
+							<td>
+								<textarea style="    width: 189px; height: 90px;" name="content" ></textarea>
+							</td>
+						</tr>
+						
+						
 					</table>
 				</form>
 			</div>
