--- a/src/main/resources/templates/admin/teachindex.html
+++ b/src/main/resources/templates/admin/teachindex.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>学生 首页</title>
+		<title>教师 首页</title>
 		<link href="favicon.ico" rel="icon" type="image/x-icon" />
 		<!-- 导入jquery核心类库 -->
 		<script type="text/javascript" src="./js/jquery-1.8.3.js"></script>
@@ -38,9 +38,13 @@
 				/* $.post("./menu_findByParentMenuIsNullByEmp.do",function(data){
 					$.fn.zTree.init($("#treeMenu"), setting, data);
 				},"json"); */
-				$.post("./pages/base/main.json",function(data){
-					$.fn.zTree.init($("#treeMenu"), setting, data);
-				},"json");
+				$.fn.zTree.init($("#treeMenu"), setting, [
+					{ "id":"12", "pId":"0", "name":"个人信息修改"},
+					{ "id":"119", "pId":"12", "name":"个人信息修改", "page":"pages/base/teacherMine"},
+					{ "id":"13", "pId":"0", "name":"个人课程"},
+					{ "id":"119", "pId":"13", "name":"个人课程管理", "page":"pages/base/courseMine"},
+					{ "id":"120", "pId":"13", "name":"查看课程预约", "page":"pages/base/teachLookChoose"}
+				]);
 				
 				// 页面加载后 右下角 弹出窗口
 				/* window.setTimeout(function(){
@@ -154,7 +158,7 @@
 				$.messager
 				.confirm('系统提示','您确定要退出本次登录吗?',function(isConfirm) {
 					if (isConfirm) {
-						location.href = './stuLogin.html';
+						location.href = 'adminLogin';
 					}
 				});
 			}
@@ -164,7 +168,7 @@
 			}
 			// 版权信息
 			function showAbout(){
-				$.messager.alert("华富商城","设计: <br/> 管理员邮箱: @163.com <br/>");
+				$.messager.alert("教师","设计: <br/> 管理员邮箱: @163.com <br/>");
 			}
 		</script>
 	</head>
@@ -172,7 +176,7 @@
 	<body class="easyui-layout">
 		<div data-options="region:'north',border:false" style="height:70px;padding:10px;">
 			<div>
-				<img src="" border="0"><h1 style="font-size: 25px">学校公共财产管理系统-学生</h1>
+				<img src="" border="0"><h1 style="font-size: 25px">家教预约管理系统-教师</h1>
 			</div>
 			<div id="sessionInfoDiv" style="position: absolute;right: 5px;top:10px;">
 			</div>
@@ -204,7 +208,7 @@
 		<div data-options="region:'center'">
 			<div id="tabs" fit="true" class="easyui-tabs" border="false">
 				<div title="消息中心" id="subWarp" style="width:100%;height:100%;overflow:hidden">
-					<iframe src="./home.html" style="width:100%;height:100%;border:0;"></iframe>
+					<!--<iframe src="./home.html" style="width:100%;height:100%;border:0;"></iframe>-->
 				</div>
 			</div>
 		</div>
@@ -214,7 +218,7 @@
 					<tr>
 						<td style="width: 400px;">
 							<div style="color: #999; font-size: 8pt;">
-								学校公共财产系统 | Powered by <a href="http://www..cn/"></a>
+								家教预约管理系统 | Powered by <a href="http://www..cn/"></a>
 							</div>
 						</td>
 						<td style="width: *;" class="co1"><span id="online" style="background: url(./images/online.png) no-repeat left;padding-left:18px;margin-left:3px;font-size:8pt;color:#005590;">在线人数:1</span>
